# todos

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
src/: todos.py  todos.py.patch
src/data/: Test1.csv
tests/: test_list.py
tests/integration/: test_integration.py
tests/unit/: test_create_list.py  test_list.py  test_list.py.patch
